--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
-    <title>PDF in HTML</title>
+    <title>دليل جواز الاحتفال بمولده ﷺ</title>
     <meta name="description" content="تعرف على المولد النبوي، الاحتفال بميلاد النبي محمد، وتاريخه، وأهميته، والعادات المرتبطة به حول العالم.">
-    <meta name="keywords" content="المولد، المولد النبوي،احتفالات المولد، الشيخ حنفية محمد مصطفى، هل يجوز الاحتفال بالمولد">    
+    <meta name="keywords" content="المولد، المولد النبوي،احتفالات المولد، الشيخ حنفية محمد مصطفى، هل يجوز الاحتفال بالمولد">   
+    <meta name="google-site-verification" content="duPgNRep7uResn8T5ukYnAlDtDo0itr4_Cvl77sAccU" />
 </head>
 <style>
     .pdf {
