--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
     }
 </style>
 
-<body>
-    <object class="pdf" 
-            data=
-"finale.pdf"
-            width="800"
-            height="500">
-    </object>
-</body>
 
+<body>
+    <h1>دليل جواز الاحتفال بمولده ﷺ</h1>
+    <!-- Use a download link for better compatibility -->
+    <p style="text-align: center;">
+        إذا لم يتم تحميل الوثيقة، يمكنك تحميلها مباشرة من هنا:
+        <a href="finale.pdf" target="_blank" download>تحميل ملف PDF</a>
+    </p>
+
+    <!-- Embed the PDF with fallback link -->
+    <iframe class="pdf" src="finale.pdf"></iframe>
+
+</body>
 </html>
+
